[package]
name = "Hydrogen"
version = "0.0.1-alpha"
edition = "2024"
description = "Forge your nation's destiny. Make crucial decisions, wield power, and outmaneuver rivals in your relentless pursuit to dominate history's stage."
repository = "https://github.com/Focasius/Hydrogen"
license = "	AGPL-3.0"

[dependencies]
rand = "0.9.2"
